--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,16 @@
 {
     "version": 2,
-    "rewrites": [
+    "routes": [
       {
-        "source": "/api/(.*)",
-        "destination": "/api/$1"
+        "handle": "filesystem"
       },
       {
-        "source": "/(.*)",
-        "destination": "/$1"
+        "src": "/api/(.*)",
+        "dest": "/api/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/$1"
       }
     ]
   }
