--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,7 @@
 {
-    "version": 2,
-    "routes": [
-      {
-        "handle": "filesystem"
-      },
-      {
-        "src": "/api/(.*)",
-        "dest": "/api/$1"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "/$1"
-      }
+    "rewrites": [
+      { "source": "/api/(.*)", "destination": "/api/$1" },
+      { "source": "/(.*)", "destination": "/api/$1" }
     ]
   }
   
