--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 { "version": 2,
     "rewrites": [
-        {"source": "/(.*)", "destination": "/api" },
+        {"source": "/(.*)", "destination": "/" },
         {"source": "/:a*", "destination": "/api" },
         {"source": "/api/(.*)", "destination": "/api/$1" }
     ] 
