--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,5 @@
 { "version": 2,
     "rewrites": [
-        {"source": "/(.*)", "destination": "/" },
-        {"source": "/:a*", "destination": "/api" },
-        {"source": "/api/(.*)", "destination": "/api/$1" }
+        {"source": "/(.*)", "destination": "/" }
     ] 
 }
