--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,9 @@
-{ "version": 2,
-
+{
+    "version": 2,
     "rewrites": [
       { "source": "/api/(.*)", "destination": "/api/$1" },
+      { "source": "/login", "destination": "/api/login" },
+      { "source": "/logout", "destination": "/api/logout" },
       { "source": "/(.*)", "destination": "/index.html" }
     ]
   }
