--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,7 @@
 {
     "version": 2,
-    "routes": [
-      { "handle": "filesystem" },
-      { "src": "/api/(.*)", "dest": "/api/$1" },
-      { "src": "/login", "dest": "/api/login" },
-      { "src": "/logout", "dest": "/api/logout" },
-      { "src": "/(.*)", "dest": "/index.html" }
+    "rewrites": [
+      { "source": "/api/(.*)", "destination": "/api/$1" },
+      { "source": "/(.*)", "destination": "/" }
     ]
   }
-
