--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,15 @@
 {
-    "version": 2,
-    "rewrites": [
-      { "source": "/api/(.*)", "destination": "/api/$1" },
-      { "source": "/(.*)", "destination": "/api" }
-    ]
-  }
+  "builds": [
+    {
+    "src": "./api/server.js",
+    "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+    "src": "/(.*)",
+    "dest": "/api"
+    }
+  ]
+}
+  
