--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,6 @@
 {
-  "builds": [
-    {
-    "src": "api/server.js",
-    "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-    "src": "/(.*)",
-    "dest": "/api"
-    }
+  "version": 2,
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/api" }
   ]
 }
-  
